# untangle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Singularity  pyproject.toml  requirements.txt  submit.py  test.py  train.py  validate.py
plots/: plot_calibration_robustness.py  plot_correctness_robustness.py  plot_correlation_datasets.py  plot_correlation_matrix.py  plot_estimator_correlation_matrix.py  plot_full_correlation_matrix.py  plot_ranking.py  plot_ranking_it.py  plot_ranking_shallow.py  utils.py
untangle/: __init__.py
untangle/datasets/: __init__.py  imagenet.py  soft_dataset.py  soft_imagenet.py  subset.py
untangle/losses/: __init__.py  bma_cross_entropy_loss.py  correctness_prediction_loss.py  duq_loss.py  edl_loss.py  fbar_cross_entropy_loss.py  loss_prediction_loss.py  normcdf_nll_loss.py  regularized_predictive_nll_loss.py  regularized_uce_loss.py  sigmoid_nll_loss.py  softmax_predictive_nll_loss.py  unnormalized_predictive_nll_loss.py
untangle/models/: __init__.py  resnet_cifar.py  resnet_cifar_fixup.py  resnet_cifar_preact.py  resnet_imagenet.py  resnet_imagenet_fixup.py  simple_convnet.py  utils.py
untangle/transforms/: __init__.py  ood_transforms_cifar.py  ood_transforms_imagenet.py  random_resized_crop.py  resize.py  resize_keep_ratio.py  to_numpy.py
untangle/utils/: __init__.py  checkpoint_saver.py  collate.py  context.py  convolution.py  dataset.py  derivative.py  distributed.py  loader.py  logging.py  loss.py  metric.py  metrics.py  model.py  parsing.py  predictive.py  random.py  reparam.py  replace.py  scaler.py  timm.py  transform.py
untangle/wrappers/: __init__.py  baseline_wrapper.py  ce_baseline_wrapper.py  correctness_prediction_wrapper.py  covariance_pushforward_laplace.py  covariance_pushforward_laplace_wrapper.py  ddu_wrapper.py  deep_ensemble_wrapper.py  duq_wrapper.py  edl_wrapper.py  fast_deep_ensemble_wrapper.py  het_wrapper.py  hetclassnn_wrapper.py  hetxl_wrapper.py  laplace_wrapper.py  linearized_swag_wrapper.py  loss_prediction_wrapper.py  mahalanobis_wrapper.py  mc_dropout_wrapper.py  model_wrapper.py  postnet_wrapper.py  sample_pushforward_laplace.py  sample_pushforward_laplace_wrapper.py  shallow_ensemble_wrapper.py  sngp_wrapper.py  swag_wrapper.py  swag_wrapper_new.py  temperature_wrapper.py
